Refactor Filter and Shopping components: Comment out unused language selection functionality, update product filtering logic, and enhance layout styles for improved user experience. Adjust mock data for books and courses to reflect accurate pricing and discounts.

--- a/src/pages/Homepage/Shopping/Shopping.module.scss
+++ b/src/pages/Homepage/Shopping/Shopping.module.scss
@@ -426,7 +426,24 @@
       & .Filter {
         display: block;
       }
+      &-icon {
+        display: block;
+        border: 0.5px solid $gray;
+        width: 3.5rem;
+        aspect-ratio: 1/1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 0.5rem;
+        cursor: pointer;
+        svg {
+          path {
+            stroke-width: 1px;
+          }
+        }
+      }
     }
+    // Shopping-mobile-filter-icon
 
     &-pagination {
       margin-top: 1.5rem;
