Update InforTab to format updatedAt date, enhance mobile menu styles, and improve Header component with user avatar display. Adjust ProductDetail styles for better alignment and update RecommendedProducts item width for improved layout.

--- a/src/components/ProductDetail/Detail/Detail.module.scss
+++ b/src/components/ProductDetail/Detail/Detail.module.scss
@@ -620,6 +620,20 @@
         width: 100%;
       }
       &-info {
+        &-item {
+          align-items: self-start;
+          strong {
+            width: max-content;
+          }
+          span {
+            width: max-content;
+          }
+        }
+        &-description {
+          p {
+            text-align: start;
+          }
+        }
         &-CTA {
           & .button {
             width: 100%;
