--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -735,6 +735,12 @@
 
     &-mobile-menu {
       display: block;
+      &::after {
+        display: none;
+      }
+      &::before {
+        display: none;
+      }
     }
 
     &-right {
@@ -773,6 +779,39 @@
       &-item {
         padding: 0.6rem;
         font-size: 13px;
+      }
+    }
+
+    &-mobile-menu {
+      &-header {
+        align-items: flex-start;
+      }
+      &-avatar {
+        gap: 0.75rem;
+        display: flex;
+        align-items: center;
+        &-image {
+          width: 18%;
+          aspect-ratio: 1 / 1;
+          img {
+            border-radius: 100rem;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+        &-info {
+          display: flex;
+          flex-direction: column;
+          gap: 0.25rem;
+          font-family: "Poppins Light", "Poppins", sans-serif;
+          font-size: 12px;
+          color: $black;
+          h4 {
+            font-family: "Poppins SemiBold", "Poppins", sans-serif;
+            font-size: 14px;
+          }
+        }
       }
     }
   }
