--- a/src/components/ProductDetail/Detail/Detail.module.scss
+++ b/src/components/ProductDetail/Detail/Detail.module.scss
@@ -502,6 +502,34 @@
   }
 }
 
+@keyframes slideDown {
+  from {
+    opacity: 0;
+    transform: scaleY(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scaleY(1);
+  }
+}
+
+@keyframes slideUp {
+  from {
+    opacity: 1;
+    transform: scaleY(1);
+  }
+  to {
+    opacity: 0;
+    transform: scaleY(0.95);
+  }
+}
+
+[data-state="open"],
+[data-state="closed"] {
+  overflow: hidden;
+  will-change: transform, opacity;
+}
+
 @media (max-width: 425.5px) {
   .Detail {
     &-header {
@@ -559,7 +587,7 @@
     }
     &-course {
       min-height: auto;
-      flex-direction: column-reverse;
+      flex-direction: column;
       img {
         width: 100%;
         aspect-ratio: 1/1;
@@ -568,15 +596,16 @@
         display: none;
       }
       &-mobile {
+        z-index: 10;
+        background-color: white;
         display: block;
         border-radius: 0.5rem;
         border: 0.25px solid $gray;
         padding: 1rem;
-        margin-top: 1rem;
         button {
-          font-family: "Poppins Medium";
-          font-size: 14px;
-          color: $gray;
+          font-family: "Poppins SemiBold";
+          font-size: 13px;
+          color: $black;
           display: flex;
           flex-direction: row;
           justify-content: space-between;
@@ -589,6 +618,15 @@
         }
         &-content {
           display: flex;
+        }
+        [data-state="open"] {
+          transform-origin: top;
+          animation: slideDown 0.3s ease-out;
+        }
+
+        [data-state="closed"] {
+          transform-origin: bottom;
+          animation: slideUp 0.3s ease-out;
         }
       }
     }
