--- a/src/pages/Auth/Auth.module.scss
+++ b/src/pages/Auth/Auth.module.scss
@@ -189,6 +189,14 @@
       text-decoration: underline;
     }
   }
+
+  form {
+    > div {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+    }
+  }
 }
 
 @media (max-width: 425.5px) {
@@ -212,10 +220,33 @@
         object-fit: cover;
       }
     }
+    &-header {
+      h1 {
+        font-size: 1.75rem;
+        margin-bottom: 0.75rem;
+      }
+      p {
+        font-size: 13px;
+      }
+    }
     &-card {
-      width: 90%;
+      width: 85%;
       height: max-content;
       padding: 2rem;
+    }
+    form {
+      > div {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+      }
+    }
+    label {
+      font-size: 13px;
+    }
+    input {
+      padding: 0.75rem 1rem;
+      font-size: 13px;
     }
   }
 }
