--- a/src/pages/Homepage/Shopping/Shopping.module.scss
+++ b/src/pages/Homepage/Shopping/Shopping.module.scss
@@ -169,6 +169,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    justify-content: flex-end;
     gap: 1rem;
 
     .pagination-container {
@@ -274,8 +275,9 @@
     }
   }
   &-Filter-tag {
-    width: 50%;
+    width: 80%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     gap: 0.5rem;
     &-item {
@@ -429,6 +431,8 @@
         -webkit-overflow-scrolling: touch;
         scrollbar-width: none;
         -ms-overflow-style: none;
+        height: max-content;
+        min-height: 0;
 
         &::-webkit-scrollbar {
           display: none;
@@ -562,7 +566,7 @@
           .majors-list {
             display: flex;
             flex-direction: column;
-            gap: 0.75rem;
+            gap: 1rem;
             max-height: 150px;
             overflow-y: auto;
 
@@ -602,18 +606,19 @@
           .majors-checkbox {
             width: 16px;
             height: 16px;
-            border: 1.5px solid $gray;
             border-radius: 0.25rem;
             background-color: transparent;
             cursor: pointer;
             position: relative;
 
             &:checked {
-              background-color: $primary-color;
-              border-color: $primary-color;
-
               &::after {
+                background-color: $primary-color;
+                border-color: $primary-color;
+                width: 100%;
+                height: 100%;
                 content: "✓";
+                text-align: center;
                 position: absolute;
                 top: 50%;
                 left: 50%;
@@ -667,6 +672,8 @@
       display: flex;
       flex-direction: row;
       gap: 0.5rem;
+      width: 100%;
+      flex-wrap: wrap;
       &-item {
         padding: 0.5rem 0.75rem;
         border-radius: 10rem;
