Refactor Arrow component and update Header, Auth, and Introduction styles for improved responsiveness: Simplify Arrow component structure, adjust mobile menu width in Header, and enhance Auth and Introduction styles with new media queries for better layout across various screen sizes.

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -473,7 +473,7 @@
   }
 
   &-mobile-menu-content {
-    width: 80%;
+    width: 50%;
     height: 100%;
     background-color: $white;
     padding: 1.5rem;
@@ -811,6 +811,18 @@
             font-family: "Poppins SemiBold", "Poppins", sans-serif;
             font-size: 14px;
           }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 425.5px) {
+  .Header {
+    &-mobile {
+      &-menu {
+        &-content {
+          width: 80%;
         }
       }
     }
