--- a/src/pages/Auth/Auth.module.scss
+++ b/src/pages/Auth/Auth.module.scss
@@ -199,6 +199,35 @@
   }
 }
 
+@media (min-width: 425.5px) and (max-width: 768.5px) {
+  .Auth {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    &-container {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    &-card {
+      width: 50%;
+      height: max-content;
+      padding: 2rem;
+    }
+  }
+}
+
 @media (max-width: 425.5px) {
   .Auth {
     width: 100%;
