--- a/src/pages/Homepage/Homepage.module.scss
+++ b/src/pages/Homepage/Homepage.module.scss
@@ -38,7 +38,8 @@
 @media (max-width: 425.5px) {
   .Homepage {
     &-Chatbot {
-      display: none;
+      right: 1.5rem;
+      box-shadow: 0 0 10px 0 rgba(18, 34, 27, 0.2);
     }
   }
 }
